<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Convert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_distance">Distance</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_back">Back</string>
    <string name="text_exit">Exit</string>
    <string name="text_convert">Convert</string>
    <string name="text_clear">Clear</string>
    <string name="defauleValue_editText">0.0</string>
    
    <string name="c_to_f">C => F</string>
    <string name="f_to_c">F => C</string>
    
    <string name="m_to_k">M => K</string>
    <string name="k_to_m">K => M</string>
    
</resources>
