<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a80b9" >

    <Button
        android:textSize="32sp"
        android:id="@+id/btnTemperatureBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/text_back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:textSize="32sp"
            android:id="@+id/edittxt_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defauleValue_editText"
            android:ems="10"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal" />

        <TextView
            android:textSize="32sp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_temperature"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
            	android:textSize="32sp"
                android:id="@+id/radioC2F"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_to_f" />

            <RadioButton
            	android:textSize="32sp"
                android:id="@+id/radioF2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_to_c" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
            	android:textSize="32sp"
                android:id="@+id/btnConvertTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_convert" />

            <Button
            	android:textSize="32sp"
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_clear" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>